containerdays/demo/kyverno/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cosign-validate-signature
spec:
  validationFailureAction: Enforce
  background: false
  failurePolicy: Fail
  rules:
    - match:
        any:
          - resources:
              kinds:
                - Pod
      name: cosign-validate-signature
      verifyImages:
        - required: true
          imageReferences:
            - "*"
          attestors:
            - count: 1
              entries:
                # Key-based signing authority using a public key
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEra1w0rzFqkU+pzsLYgGTI1kTO9GG
[...]
                      -----END PUBLIC KEY-----
                    rekor:
                      url: https://rekor.sigstore.dev
                # Keyless signing authority using Fulcio and Rekor
                - keyless:
                    subject: "https://github.com/relusc/talks/.github/workflows/*"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
